--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -1,7 +1,7 @@
 name: core
 description: "A new Flutter package project."
 version: 0.0.1
-publish_to: none
+publish_to: "none"
 
 environment:
   sdk: ">=3.3.4 <4.0.0"
