--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,7 @@
-name: flutter_parking_management
-description: "A new Flutter project."
-publish_to: "none"
-
-version: 1.0.0+1
+name: "flutter_parking_management_workspace"
 
 environment:
-  sdk: ">=3.3.4 <4.0.0"
-
-dependencies:
-  flutter:
-    sdk: flutter
-
-  core:
-    path: packages/core
-  common_deps:
-    path: packages/common_deps
-
-  cupertino_icons: ^1.0.6
+  sdk: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  flutter_lints: ^3.0.0
-  freezed: ^2.5.0
-  json_serializable: ^6.7.1
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.9
-
-flutter:
-  uses-material-design: true
+  melos: ^6.0.0
