improve vehicle module

--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
     sdk: flutter
 
   common_deps:
-    path: ../common_deps
+    git:
+      url: https://github.com/lattoshenrique/flutter_parking_management.git
+      path: packages/common_deps
+      ref: main
 
 dev_dependencies:
   flutter_test:
