--- a/packages/design_system/pubspec.yaml
+++ b/packages/design_system/pubspec.yaml
@@ -12,9 +12,15 @@ dependencies:
     sdk: flutter
 
   common_deps:
-    path: ../common_deps
+    git:
+      url: https://github.com/lattoshenrique/flutter_parking_management.git
+      path: packages/common_deps
+      ref: main
   core:
-    path: ../core
+    git:
+      url: https://github.com/lattoshenrique/flutter_parking_management.git
+      path: packages/core
+      ref: main
 
 dev_dependencies:
   flutter_test:
