--- a/packages/design_system/pubspec.yaml
+++ b/packages/design_system/pubspec.yaml
@@ -27,5 +27,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+  freezed: ^2.5.0
+  build_runner: ^2.4.9
+
 flutter:
   uses-material-design: true
