create vehicle local datasource test

--- a/packages/common_deps/pubspec.yaml
+++ b/packages/common_deps/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   collection: ^1.18.0
   dartz: ^0.10.1
   shimmer: ^3.0.0
+  mocktail: ^1.0.3
+  faker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
