--- a/apps/base_app/pubspec_overrides.yaml
+++ b/apps/base_app/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: common_deps,core,design_system,vehicles,vehicles_commons
+# melos_managed_dependency_overrides: common_deps,core,design_system,home,vehicles,vehicles_commons
 dependency_overrides:
   common_deps:
     path: ..\\..\\packages\\common_deps
@@ -6,6 +6,8 @@ dependency_overrides:
     path: ..\\..\\packages\\core
   design_system:
     path: ..\\..\\packages\\design_system
+  home:
+    path: ..\\..\\packages\\home
   vehicles:
     path: ..\\..\\packages\\vehicles\\vehicles
   vehicles_commons:
