--- a/packages/parking/parking_commons/pubspec.yaml
+++ b/packages/parking/parking_commons/pubspec.yaml
@@ -1,16 +1,14 @@
-name: flutter_parking_management
-description: "A new Flutter project."
+name: parking_commons
+description: "A new Flutter package project."
+version: 0.0.1
 publish_to: "none"
-
-version: 1.0.0+1
 
 environment:
   sdk: ">=3.3.4 <4.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
-    sdk: flutter
-  flutter_localizations:
     sdk: flutter
 
   common_deps:
@@ -28,27 +26,21 @@ dependencies:
       url: https://github.com/lattoshenrique/flutter_parking_management.git
       path: packages/design_system
       ref: main
-  vehicles:
+  vehicles_commons:
     git:
       url: https://github.com/lattoshenrique/flutter_parking_management.git
-      path: packages/vehicles/vehicles
-      ref: main
-  home:
-    git:
-      url: https://github.com/lattoshenrique/flutter_parking_management.git
-      path: packages/home
-      ref: main
-  parking:
-    git:
-      url: https://github.com/lattoshenrique/flutter_parking_management.git
-      path: packages/parking/parking
+      path: packages/vehicles_commons
       ref: main
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^3.0.0
+
+  freezed: ^2.5.0
+  json_serializable: ^6.7.1
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
