--- a/packages/home/pubspec.yaml
+++ b/packages/home/pubspec.yaml
@@ -29,7 +29,12 @@ dependencies:
   vehicles_commons:
     git:
       url: https://github.com/lattoshenrique/flutter_parking_management.git
-      path: packages/vehicles_commons
+      path: packages/vehicles/vehicles_commons
+      ref: main
+  parking_commons:
+    git:
+      url: https://github.com/lattoshenrique/flutter_parking_management.git
+      path: packages/parking/parking_commons
       ref: main
 
 dev_dependencies:
