--- a/packages/home/pubspec_overrides.yaml
+++ b/packages/home/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: common_deps,core,design_system,vehicles_commons
+# melos_managed_dependency_overrides: common_deps,core,design_system,parking_commons,vehicles_commons
 dependency_overrides:
   common_deps:
     path: ..\\common_deps
@@ -6,5 +6,7 @@ dependency_overrides:
     path: ..\\core
   design_system:
     path: ..\\design_system
+  parking_commons:
+    path: ..\\parking\\parking_commons
   vehicles_commons:
     path: ..\\vehicles\\vehicles_commons
