--- a/packages/common_deps/pubspec.yaml
+++ b/packages/common_deps/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   mocktail: ^1.0.3
   faker: ^2.1.0
   uuid: ^4.4.0
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
