set ios project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,23 +3,22 @@
   // Focalizar para exibir as descrições dos atributos existentes.
   // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
+  "configurations": [{
       "name": "base_app",
-      "cwd": "apps\\base_app",
+      "cwd": "apps/base_app",
       "request": "launch",
       "type": "dart"
     },
     {
       "name": "base_app (profile mode)",
-      "cwd": "apps\\base_app",
+      "cwd": "apps/base_app",
       "request": "launch",
       "type": "dart",
       "flutterMode": "profile"
     },
     {
       "name": "base_app (release mode)",
-      "cwd": "apps\\base_app",
+      "cwd": "apps/base_app",
       "request": "launch",
       "type": "dart",
       "flutterMode": "release"
