--- a/apps/base_app/pubspec_overrides.yaml
+++ b/apps/base_app/pubspec_overrides.yaml
@@ -1,18 +1,18 @@
 # melos_managed_dependency_overrides: common_deps,core,design_system,home,parking,parking_commons,vehicles,vehicles_commons
 dependency_overrides:
   common_deps:
-    path: ..\\..\\packages\\common_deps
+    path: ../../packages/common_deps
   core:
-    path: ..\\..\\packages\\core
+    path: ../../packages/core
   design_system:
-    path: ..\\..\\packages\\design_system
+    path: ../../packages/design_system
   home:
-    path: ..\\..\\packages\\home
+    path: ../../packages/home
   parking:
-    path: ..\\..\\packages\\parking\\parking
+    path: ../../packages/parking/parking
   parking_commons:
-    path: ..\\..\\packages\\parking\\parking_commons
+    path: ../../packages/parking/parking_commons
   vehicles:
-    path: ..\\..\\packages\\vehicles\\vehicles
+    path: ../../packages/vehicles/vehicles
   vehicles_commons:
-    path: ..\\..\\packages\\vehicles\\vehicles_commons
+    path: ../../packages/vehicles/vehicles_commons
